cabal-version:       2.4
name:                advent2019
version:             0.1.0.0
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2019 Eric Mertens
build-type:          Simple

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Coord
    Advent.PQueue
    Advent.Search
    Advent.Queue
    Advent.Visualize
    Advent.Intcode
    Advent.Intcode.Trace
    Advent.Intcode.Conduino

  build-depends:
    base         ^>= 4.13,
    array        ^>= 0.5.3,
    conduino     ^>= 0.2,
    containers   ^>= 0.6,
    JuicyPixels  ^>= 3.3.2,
    MemoTrie     ^>= 0.6.9,
    megaparsec   ^>= 8.0,
    vector       ^>= 0.12,
    transformers ^>= 0.5,

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language:    Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.16.2,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

executable Breakout
  main-is:             Breakout.hs
  ghc-options:         -threaded
  build-depends:       advent2019, base, conduino, transformers, containers, vty
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable IntcodeConsole
  main-is:             IntcodeConsole.hs
  ghc-options:         -threaded
  build-depends:       advent2019, base, transformers, containers, megaparsec, ansi-terminal
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2019, base,
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       advent2019, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day17
  main-is:             Day17.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day18
  main-is:             Day18.hs
  build-depends:       advent2019, base, containers, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day19
  main-is:             Day19.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day20
  main-is:             Day20.hs
  build-depends:       advent2019, base, containers, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day21
  main-is:             Day21.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day22
  main-is:             Day22.hs
  build-depends:       advent2019, base, arithmoi
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day23
  main-is:             Day23.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day24
  main-is:             Day24.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day25
  main-is:             Day25.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
