cabal-version:       2.4
name:                advent2019
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2019 Eric Mertens
homepage:            https://github.com/glguy/advent2019
bug-reports:         https://github.com/glguy/advent2019/issues
build-type:          Simple
tested-with:         GHC==8.8.3

source-repository head
  type: git
  location: https://github.com/glguy/advent2019

common intcode
  build-depends:       intcode ^>= 0.3,

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Coord
    Advent.PQueue
    Advent.Search
    Advent.Queue
    Advent.Visualize

  build-depends:
    base         >= 4.13 && < 4.15,
    containers   ^>= 0.6,
    JuicyPixels  ^>= 3.3.2,
    megaparsec   ^>= 8.0,


test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language:    Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.16.2,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

executable IntcodeConsole
  import:              intcode
  main-is:             IntcodeConsole.hs
  ghc-options:         -threaded
  build-depends:       advent2019, base, transformers, containers, megaparsec, ansi-terminal
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  import:              intcode
  main-is:             Day02.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  import:              intcode
  main-is:             Day05.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  import:              intcode
  main-is:             Day07.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  import:              intcode
  main-is:             Day09.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  import:              intcode
  main-is:             Day11.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day13
  import:              intcode
  main-is:             Day13.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day15
  import:              intcode
  main-is:             Day15.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       advent2019, base, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day17
  import:              intcode
  main-is:             Day17.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day18
  main-is:             Day18.hs
  build-depends:       advent2019, base, containers, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day19
  import:              intcode
  main-is:             Day19.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day20
  main-is:             Day20.hs
  build-depends:       advent2019, base, containers, array
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day21
  import:              intcode
  main-is:             Day21.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day22
  main-is:             Day22.hs
  build-depends:       advent2019, base, arithmoi
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day23
  import:              intcode
  main-is:             Day23.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day24
  main-is:             Day24.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day25
  import:              intcode
  main-is:             Day25.hs
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010
