cabal-version:       2.4
name:                advent2019
version:             0.1.0.0
category:            None
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2019 Eric Mertens
homepage:            https://github.com/glguy/advent2019
bug-reports:         https://github.com/glguy/advent2019/issues
build-type:          Simple
tested-with:         GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/glguy/advent2019

common intcode
  build-depends:       intcode ^>= 0.3,

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Coord
    Advent.PQueue
    Advent.Search
    Advent.Queue
    Advent.Visualize

  build-depends:
    base         ^>= 4.14,
    containers   ^>= 0.6,
    JuicyPixels  ^>= 3.3.2,
    megaparsec   ^>= 9.0,


test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  default-language:    Haskell2010

  build-depends:
    base,
    doctest   ^>= 0.17,
    directory ^>= 1.3,
    filepath  ^>= 1.4,

common day
  build-depends:       advent2019, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable IntcodeConsole
  import:              day, intcode
  main-is:             IntcodeConsole.hs
  ghc-options:         -threaded
  build-depends:       transformers, containers, megaparsec, ansi-terminal

executable Day01
  import:              day
  main-is:             Day01.hs

executable Day02
  import:              day, intcode
  main-is:             Day02.hs

executable Day03
  import:              day
  main-is:             Day03.hs
  build-depends:       containers

executable Day04
  import:              day
  main-is:             Day04.hs

executable Day05
  import:              day, intcode
  main-is:             Day05.hs
  build-depends:       containers

executable Day06
  import:              day
  main-is:             Day06.hs
  build-depends:       containers

executable Day07
  import:              day, intcode
  main-is:             Day07.hs
  build-depends:       containers

executable Day08
  import:              day
  main-is:             Day08.hs
  build-depends:       containers

executable Day09
  import:              day, intcode
  main-is:             Day09.hs
  build-depends:       containers

executable Day10
  import:              day
  main-is:             Day10.hs
  build-depends:       containers

executable Day11
  import:              day, intcode
  main-is:             Day11.hs
  build-depends:       containers

executable Day12
  import:              day
  main-is:             Day12.hs

executable Day13
  import:              day, intcode
  main-is:             Day13.hs
  build-depends:       containers

executable Day14
  import:              day
  main-is:             Day14.hs
  build-depends:       containers

executable Day15
  import:              day, intcode
  main-is:             Day15.hs

executable Day16
  import:              day
  main-is:             Day16.hs
  build-depends:       vector

executable Day17
  import:              day, intcode
  main-is:             Day17.hs
  build-depends:       containers

executable Day18
  import:              day
  main-is:             Day18.hs
  build-depends:       containers, array

executable Day19
  import:              day, intcode
  main-is:             Day19.hs

executable Day20
  import:              day
  main-is:             Day20.hs
  build-depends:       containers, array

executable Day21
  import:              day, intcode
  main-is:             Day21.hs

executable Day22
  import:              day
  main-is:             Day22.hs
  build-depends:       arithmoi

executable Day23
  import:              day, intcode
  main-is:             Day23.hs
  build-depends:       containers, transformers

executable Day24
  import:              day
  main-is:             Day24.hs
  build-depends:       containers

executable Day25
  import:              day, intcode
  main-is:             Day25.hs
